[gd_scene load_steps=5 format=3 uid="uid://xb0i5ujbm2se"]

[ext_resource type="Script" path="res://Scenes/Rooms/room_base.gd" id="1_cl5fh"]
[ext_resource type="PackedScene" uid="uid://ccb1c1hx0ybg7" path="res://Scenes/Triggers/load_zone.tscn" id="2_s3cnm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hmlnd"]
radius = 134.41

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pg7e5"]
size = Vector2(100, 100)

[node name="RoomBase" type="Node2D"]
script = ExtResource("1_cl5fh")

[node name="SpawnPointsHolder" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="SpawnPointsHolder"]
position = Vector2(561, 478)
gizmo_extents = 100.0

[node name="LoadZonesHolder" type="Node2D" parent="."]

[node name="LoadZone" parent="LoadZonesHolder" instance=ExtResource("2_s3cnm")]

[node name="Triggers" type="Node2D" parent="."]

[node name="ExitPointsHolder" type="Node2D" parent="."]

[node name="ExitPoint" type="Area2D" parent="ExitPointsHolder"]
position = Vector2(1932, -169)

[node name="Marker2D" type="Marker2D" parent="ExitPointsHolder/ExitPoint"]
gizmo_extents = 55.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitPointsHolder/ExitPoint"]
shape = SubResource("CircleShape2D_hmlnd")

[node name="LevelHolder" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="LevelHolder"]
position = Vector2(937, 909)
rotation = 0.519208
scale = Vector2(25.8, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelHolder/StaticBody2D"]
shape = SubResource("RectangleShape2D_pg7e5")

[node name="ColorRect" type="ColorRect" parent="LevelHolder/StaticBody2D"]
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0

[node name="Label" type="Label" parent="."]
offset_left = 548.0
offset_top = 62.0
offset_right = 1302.0
offset_bottom = 371.0
rotation = -0.158718
theme_override_font_sizes/font_size = 226
text = "Level 2"
